--- a/index.html
+++ b/index.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Rating</title>
-</head>
-<body>
-    <h1>How did we do?</h1>
-    <p>Please let us know how we did with your support request. All feedback is apperciated to help us improve our offering!</p>
-    <span>1</span>
-    <span>2</span>
-    <span>3</span>
-    <span>4</span>
-    <span>5</span>
-    <button>Submit</button>
-</body>
+  </head>
+  <body>
+    <section class="rating__section">
+      <div class="rating_content">
+        <div class="star_icon">
+          <svg width="17" height="16" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="m9.067.43 1.99 4.031c.112.228.33.386.58.422l4.45.647a.772.772 0 0 1 .427 1.316l-3.22 3.138a.773.773 0 0 0-.222.683l.76 4.431a.772.772 0 0 1-1.12.813l-3.98-2.092a.773.773 0 0 0-.718 0l-3.98 2.092a.772.772 0 0 1-1.119-.813l.76-4.431a.77.77 0 0 0-.222-.683L.233 6.846A.772.772 0 0 1 .661 5.53l4.449-.647a.772.772 0 0 0 .58-.422L7.68.43a.774.774 0 0 1 1.387 0Z"
+              fill="#FC7614"
+            />
+          </svg>
+        </div>
+        <h1>How did we do?</h1>
+        <p>
+          Please let us know how we did with your support request. All feedback
+          is apperciated to help us improve our offering!
+        </p>
+        <div class="rating__value">
+          <span class="value">1</span>
+          <span class="value">2</span>
+          <span class="value">3</span>
+          <span class="value">4</span>
+          <span class="value">5</span>
+        </div>
+        <button>Submit</button>
+      </div>
+    </section>
+  </body>
+  <script>
+    let chooseVlaue = document.querySelectorAll(".value");
+    // chooseVlaue.addEventListener('click', submitValue);
+    // function submitValue(){
+    for (i = 0; i <= chooseVlaue.length; i++) {
+      chooseVlaue[i].addEventListener("click", () => {
+        console.log(i);
+        // chooseVlaue[i].classList.add("active");
+      });
+
+      // i.classList.add("active");
+    }
+    // }
+  </script>
 </html>
